Fix T76276: Compiler Error C1061 due to too many nested if/else in MANTA_main.cpp

The compiler error should be fixed by removing the 'else if' blocks. However, this function should still be refactored in the future.